# EntityComponentSystem

./: .gitignore  .gitmodules  CMakeLists.txt  backend_sfml.cmake  dependencies
include/ecs/: component_array.h  component_array.tpl  component_manager.h  ecs_exception.h  entitiy_component_system.h  entity_manager.h  system_manager.h
include/ecs/backend/sfml/: texture_manager.h
include/ecs/components/: camera.h  gravity.h  renderable.h  rigid_body.h  transform.h
include/ecs/core/: component_array.h  component_array.tpl  component_manager.h  ecs_exception.h  entity_component_system.h  entity_manager.h  system_manager.h
include/ecs/event/: event.h  event_handler.h  event_new.h
include/ecs/state/: state_base.h  state_manager.h
include/ecs/systems/: physics_system.h  render_sfml.h  render_system.h  render_system_interface.h
include/ecs/utils/: resource_manager.h  texture_manager.h  timer.h
include/logging/: logging.h
src/: CMakeLists.txt
src/ecs/: entity_manager.cpp
src/ecs/core/: entity_manager.cpp
src/ecs/systems/: physics_system.cpp  render_sfml.cpp  render_system.cpp
src/ecs/utils/: timer.cpp
src/examples/: cube_example.cpp  sfml-example.cpp  short_example.cpp  timer_example.cpp
tests/: CMakeLists.txt
tests/unittests/: ecs_tests.cpp
